js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-await-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
{
await
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
}
)
;
